# src/api/controllers/m.step.controller.js
@@ -423,3 +423,47 @@ export async function setOriginStep(req, res) {
     }
 
 }
+
+// set entity to step
+export async function setEntityToStep(req, res) {
+
+    const language = 'es';
+
+    try {
+
+        // validate m/step id
+        req.check('step', getMessage('m.process.steps.step_required', language)).custom((value) => {
+            return !validator.isEmpty(req.swagger.params.step.value);
+        });
+        req.check('step', getMessage('m.process.steps.step_invalid', language)).custom((value) => {
+            return validator.isMongoId(req.swagger.params.step.value);
+        });
+
+        // validate entity
+        req.check('entity', getMessage('m.process.entities.entity_required', language)).custom((value) => {
+            return !validator.isEmpty(req.swagger.params.entity.value);
+        });
+        req.check('entity', getMessage('m.process.entities.entity_invalid', language)).custom((value) => {
+            return validator.isMongoId(req.swagger.params.entity.value);
+        });
+
+        const errors = req.validationErrors();
+        if (errors) {
+            return badRequest(res, 400, { message: errors[0].msg });
+        }
+
+        const mStepId = req.swagger.params.step.value;
+        const vuEntityId = req.swagger.params.entity.value;
+
+        const stepUpdated = await StepImplementation.iSetEntityToStep(mStepId, vuEntityId);
+
+        return result(res, 200, mStepTransformer.transformer(stepUpdated));
+    } catch (exception) {
+        console.log("m.step@setEntityToStep ---->", exception);
+        if (exception.codeHttp && exception.key) {
+            return error(res, exception.codeHttp, { message: getMessage(exception.key, 'es') });
+        }
+        return error(res, 500, { message: 'Server error ...' });
+    }
+
+}
