# src/api/swagger/m.step.swagger.yaml
@@ -310,3 +310,34 @@
         description: Server error
         schema:
           $ref: "#/definitions/Error"
+
+/api/m/steps/{step}/entities/{entity}:
+  x-swagger-router-controller: m.step.controller
+  put:
+    operationId: setEntityToStep
+    security:
+      - Bearer: []
+    x-security-scopes:
+      - 5d710564330f7d7cd67ee491
+    tags:
+      - PM - M/Steps
+    summary: Set entity to step
+    description: Set entity to step
+    parameters:
+      - name: step
+        in: path
+        type: string
+        description: PM - M/Step ID
+        required: true
+      - name: entity
+        description: VU - Entity ID
+        in: path
+        type: string
+        required: true
+    responses:
+      200:
+        description: Add entity to step
+      500:
+        description: Server error
+        schema:
+          $ref: "#/definitions/Error"          
